# jellyschema

./: .editorconfig  .gitignore  .travis.yml  .yamllint  CHANGELOG.md  Cargo.toml  NOTES.md  README.md  SPEC_SUPPORT.md  build.rs  repo.yml  requirements.txt  rust-toolchain  rustfmt.toml  versionist.conf.js
.versionbot/: CHANGELOG.yml
ci/: build-wasm.sh  deploy.sh  install.sh  test.sh
docs/: MAINTAINER.md  NOTES.md  SPEC_SUPPORT.md  add-data-type.md  specification.md
examples/: data_type.rs  keyword.rs  validation.rs  validation_keyword.rs
examples/browser/: README.md  index.html  index.js  package.json
examples/javascript/browser/: index.html  index.js
examples/javascript/node/: index.js  package.json
examples/node/: index.js  package.json
fuzz/: Cargo.toml  run-fuzzer.sh
fuzz/fuzz_targets/: any_input.rs  generator.rs
fuzz/seeds/: balena-os.yml  null-key.yaml
node/tests/: README.md  package.json
node/tests/src/: generate.test.js
scripts/: build-wasm.sh  deploy.sh  install.sh  test.sh
src/: dsl_schema.rs  error.rs  generator.rs  lib.rs  macros.rs  ui_config.rs  wasm.rs
src/data_types/: macros.rs  mod.rs
src/data_types/binary/: mod.rs  validation.yaml
src/data_types/chrony_address/: mod.rs  validation.yaml
src/data_types/date/: mod.rs
src/data_types/date_time/: mod.rs  validation.yaml
src/data_types/dnsmasq_address/: mod.rs  validation.yaml
src/data_types/email/: mod.rs  validation.yaml
src/data_types/file/: mod.rs  validation.yaml
src/data_types/hostname/: mod.rs  validation.yaml
src/data_types/ip_address/: mod.rs  validation.yaml
src/data_types/ipv4_address/: mod.rs  validation.yaml
src/data_types/ipv6_address/: mod.rs  validation.yaml
src/data_types/password/: mod.rs  validation.yaml
src/data_types/port/: mod.rs  schema.yaml  validation.yaml
src/data_types/time/: mod.rs  validation.yaml
src/data_types/uuidv4/: mod.rs  validation.yaml
src/dsl/: compiler.rs  deserialization.rs  enums.rs  from_yaml.rs  mod.rs  object_types.rs  schema.rs  types.rs  validation.rs  validator.rs
src/dsl/compiler/: mod.rs  normalizer.rs  validator.rs
src/dsl/enums/: deserialization.rs  from_yaml.rs  mod.rs  normalization.rs  validation.rs
src/dsl/object_types/: deserialization.rs  from_yaml.rs  mod.rs  normalization.rs  validation.rs
src/dsl/schema/: deserialization.rs  dynamic.rs  from_yaml.rs  mod.rs  normalization.rs  validation.rs  when.rs
src/filler/: mod.rs
src/generator/: mod.rs
src/generator/serialization/: json_schema.rs  ui_schema.rs
src/keywords/: addable.rs  collapsed.rs  collapsible.rs  const_.rs  description.rs  enum_.rs  exclusive_max.rs  exclusive_min.rs  generate.rs  help.rs  hidden.rs  items.rs  max.rs  max_items.rs  max_length.rs  min.rs  min_items.rs  min_length.rs  mod.rs  multiple_of.rs  orderable.rs  pattern.rs  placeholder.rs  properties.rs  read_only.rs  removable.rs  title.rs  type_.rs  unique_items.rs  version.rs  warning.rs  write_only.rs
src/output/: generator.rs  mod.rs
src/output/serialization/: json_schema.rs  mod.rs  object_types.rs  properties.rs  ui_object.rs  ui_schema.rs  when.rs
src/path/: lookup.rs  mod.rs
src/schema/: enum.rs  mod.rs  type.rs  version.rs
src/ui_configuration/: generator.rs  json_schema.rs  mod.rs  properties.rs  serialization.rs  to_json_schema.rs  ui_object.rs
src/validator/: mod.rs
src/validators/: const_.rs  enum_.rs  exclusive_max.rs  exclusive_min.rs  items.rs  max.rs  max_items.rs  max_length.rs  min.rs  min_items.rs  min_length.rs  mod.rs  multiple_of.rs  pattern.rs  properties.rs  type_.rs  unique_items.rs
tests/: invalid_data_test_template  output_invalid_data_test_template  output_valid_data_test_template  test_template  tests.rs  ui_schema_object_tests.rs  validator_error_test_template
tests/generator/: invalid-test-template  valid-test-template
tests/output/: invalid-test-template  valid-test-template
tests/validator/: data-test-template  errors-test-template
tests/validators/: data-test-template  errors-test-template
(+233 files in other folders)
