[package]
name = "balena-cdsl"
version = "0.10.0"
authors = ["Robert Vojta <robert@balena.io>", "Cyryl Płotnicki <cyryl@balena.io>"]
edition = "2018"
build = "build.rs"
maintenance = { status = "experimental" }
license = "Apache-2.0"
repository = "https://github.com/balena-io-modules/balena-cdsl/"
description = "Configuration DSL"
categories = ["config", "encoding", "wasm"]
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies.heck]
version = "0.3"

[dependencies.regex]
version = "1.0"

[dependencies.serde]
version = "1.0"

[dependencies.serde_derive]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.serde_yaml]
version = "0.8"

[dependencies.yaml-merge-keys]
version= "0.3"
features = ["serde_yaml"]

[dev-dependencies.pretty_assertions]
version = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[target.'cfg(target_arch = "wasm32")'.dependencies.console_error_panic_hook]
version = "0.1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies.wasm-bindgen-test]
version = "0.2"
