[package]
name = "jellyschema"
version = "0.11.10"
authors = ["Robert Vojta <robert@balena.io>", "Cyryl Płotnicki <cyryl@balena.io>"]
edition = "2018"
build = "build.rs"
maintenance = { status = "experimental" }
license = "Apache-2.0"
repository = "https://github.com/balena-io-modules/jellyschema/"
description = "Configuration DSL"
categories = ["config", "encoding", "wasm"]
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
disable-wasm-bindings = []

[dependencies.base64]
version = "0"

[dependencies.balena-temen]
# 0.5.1 introduces disable-wasm-bindings features
version = "~0.5.1"
features = ["disable-wasm-bindings"]

[dependencies.chrono]
version = "0"

[dependencies.lazy_static]
version = "1"

[dev-dependencies.pretty_assertions]
version = "0.5"

[dependencies.regex]
version = "1.0"

[dependencies.serde]
version = "1.0"

[dependencies.serde_derive]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.serde_yaml]
version = "0.8"

[dependencies.uuid]
version = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[target.'cfg(target_arch = "wasm32")'.dependencies.console_error_panic_hook]
version = "0.1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies.wasm-bindgen-test]
version = "0.2"

[build-dependencies.strfmt]
version = "0.1"
