[package]
name = "jellyschema"
version = "0.12.0"
authors = ["Robert Vojta <robert@balena.io>"]
edition = "2018"
build = "build.rs"
license = "Apache-2.0"
repository = "https://github.com/balena-io-modules/jellyschema/"
description = "Jelly Schema"
categories = ["config", "encoding", "wasm"]
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
disable-wasm-bindings = []

[dependencies.base64]
version = "0"

[dependencies.error-chain]
version = "0.1"

[dependencies.float-cmp]
version = "0.5.0"

[dependencies.chrono]
version = "0"

[dependencies.lazy_static]
version = "1"

[dependencies.pest]
version = "2"

[dependencies.pest_derive]
version = "2"

[dependencies.regex]
version = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.serde_yaml]
version = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.uuid]
version = "0.7"
features = ["v4"]

[target.'cfg(target_arch = "wasm32")'.dependencies.uuid]
version = "0.7"
features = ["v4", "wasm-bindgen"]

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[target.'cfg(target_arch = "wasm32")'.dependencies.console_error_panic_hook]
version = "0.1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies.wasm-bindgen-test]
version = "0.2"

[build-dependencies.strfmt]
version = "0.1"
